# Vessels-ML

./: .gitignore  README.md  analyze_characteristics.py  extract_lesions.py  main-kaggle.py  main.py  pyproject.toml  requirements.txt  t.ipynb  tm_model.pkl  train_lesion_classfier.py  tzetlin-interpretability.ipynb  tzetlin.ipynb  tzetlin.py  visualize_lesions.py
Dataset/: lesion_data.csv
Dataset/graphs/: 100.pkl  107.pkl  112.pkl  116.pkl  119.pkl  123.pkl  126.pkl  127.pkl  128.pkl  13.pkl  130.pkl  138.pkl  142.pkl  144.pkl  145.pkl  148.pkl  158.pkl  159.pkl  173.pkl  174.pkl  176.pkl  177.pkl  181.pkl  183.pkl  188.pkl  190.pkl  195.pkl  197.pkl  198.pkl  20.pkl  203.pkl  208.pkl  213.pkl  219.pkl  220.pkl  221.pkl  229.pkl  235.pkl  242.pkl  245.pkl  (+183 more)
assets/: manual_annotations.afdesign
data/Dataset-pruned/: ReadMe.txt  lesion_data.csv  pixel_spacing.csv  utils.py
data/Dataset-pruned/graphs/: 1.pkl  10.pkl  103.pkl  104.pkl  105.pkl  108.pkl  11.pkl  111.pkl  113.pkl  114.pkl  115.pkl  118.pkl  12.pkl  120.pkl  121.pkl  124.pkl  125.pkl  129.pkl  132.pkl  135.pkl  136.pkl  137.pkl  139.pkl  14.pkl  140.pkl  143.pkl  146.pkl  147.pkl  149.pkl  152.pkl  153.pkl  154.pkl  155.pkl  156.pkl  157.pkl  16.pkl  160.pkl  161.pkl  162.pkl  163.pkl  (+347 more)
data/Dataset/base_images/: segmentation_df.csv
data/Dataset/graphs/: 0.pkl  101.pkl  102.pkl  106.pkl  109.pkl  110.pkl  117.pkl  122.pkl  131.pkl  133.pkl  134.pkl  141.pkl  15.pkl  2.pkl  (+170 more)
results/: feature_importance.csv
yolo_dataset/: dataset.yaml
yolo_dataset/train/: labels.cache
yolo_dataset/val/: labels.cache
(+492 files in other folders)
